# marcus-bikeshop-backend

./: .gitignore  Dockerfile  README.md  app.py  common.py  main.py  populate.sql  pyproject.toml  requirements.txt
config_rules/: orm.py  repository.py
config_rules/domain/: model.py
orders/: api.py  orm.py  repository.py
orders/domain/: model.py
product/: api.py  orm.py  repository.py
product/domain/: model.py
service_layer/: config_rules_service.py  orders_service.py  product_service.py
tests/: conftest.py  test_orders_service.py  test_product_services.py
