[project]
name = "marcus-bikeshop"
version = "0.1.0"
description = "Ecommerce site for Marcus' bikeshop business"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask==3.1",
    "pydantic==2.10",
    "sqlalchemy==2.0.39",
    "Flask-SQLAlchemy==3.1.1",
    "flask-pydantic-api==1.5.0",
    "flask-pydantic-api[serializer]",

    # should be in a dependencies.test or something    
    "pytest",

]

[tool.pytest.ini_options]
pythonpath=[".", "src"]
testpaths=["tests"]

